--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
-SERVICE_PORT=8080
-SERVICE_HOST=localhost
-
-
+SERVICE_PORT=8081
+SERVICE_HOST=127.0.0.1
 
 # #DB Local psql
 DB_DRIVER="postgresonai" 
 DB_USER="postgres"
 DB_PASSWORD="my-secret-pw-23"
 DB_SCHEMA="db_online_store"
-DB_HOST="localhost"
+DB_HOST="127.0.0.1"
 DB_PORT=5432
